# ninja-task

./: .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yaml
api/: Cargo.toml  Dockerfile
api/src/: handler.rs  main.rs  mutation.rs  query.rs  ty.rs
snapchat/: Cargo.toml
snapchat/src/: auth.rs  client.rs  lib.rs  request.rs  segment.rs  user.rs
snapchat/src/ty/: auth.rs  mod.rs  segment.rs  user.rs
src/: main.rs
src/snapchat/: client.rs  mod.rs  request.rs  segment.rs  ty.rs  user.rs
src/snapchat/ty/: mod.rs  segment.rs  user.rs
web/: Cargo.toml  Dioxus.toml  README.md
web/assets/sass/: main.scss
web/assets/sass/base/: _base.scss
web/assets/sass/page/: _auth.scss  _create.scss  _segment.scss  _segments.scss  _update.scss
web/src/: create_segment.rs  fetch.rs  main.rs  segment.rs  segments.rs  update_segment.rs
web_server/: Cargo.toml  Dockerfile
web_server/src/: main.rs
