[package]
name = "ninja-task"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json"] }
sqlx = { version = "0.7.4", features = ["chrono"] }
async-graphql = { version = "7.0.2", features = ["chrono"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
sha2 = "0.10.8"
hex = "0.4.3"
