[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.3"
async-graphql-poem = "7.0.4"
async-trait = "0.1.80"
poem = "3.0.0"
serde = { version = "1.0.199", features = ["derive"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.116"

snapchat = { path = "../snapchat" }
