[package]
name = "web_client"
version = "0.1.0"
authors = ["Obei Sideg <obei.sideg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dioxus = { version = "0.5", features = ["web", "router"] }
reqwest = "0.12.4"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0.116"
web-sys = "0.3.69"

snapchat = { path = "../snapchat" }
async-recursion = "1.1.1"
